fix: badge gaps, nerd font plugin
- Fixes #2
- Updates the approach of the Nerd Font plugin to only provide
  additional glyphs and icons
- Badge endcap styles are now included in the base library and no long
  require the nerd font plugin

--- a/packages/css/src/base.css
+++ b/packages/css/src/base.css
@@ -9,7 +9,8 @@
     --foreground1: #444;
     --foreground2: #888;
 
-    --font-size: 16px; --line-height: 1.3;
+    --font-size: 16px;
+    --line-height: 1.3;
 
     --font-weight-bold: 700;
     --font-weight-normal: 400;
